--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1>{% block title %}{{ block.super }}{% endblock title %}</h1>
   </header> <!--header-->
 
-  <a id="documentation" href="http://cactusformac.com/redirect/#documentation">Documentation</a>
+  <a id="documentation" href="http://cactusformac.com/redirect/#documentation">This is for the - Documentation</a>
 
   <section id="thumbnails" class="group">
     {% for post in posts %}
@@ -17,7 +17,7 @@
   
   {% block footer %}
   <footer id="footer">
-    <p class="small">A short description.</p>
+    <p class="small">This is for the - A short description.</p>
   </footer>
   {% endblock footer %}
 </section> <!--wrapper-->
