--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Semi-Pro | About</title>
+<title>CIVICS.com | About</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -63,7 +63,7 @@
 	      <li><a href="portfolio.html">Portfolio</a></li>
 	      <li><a href="blog.html">Blog</a></li>
 	      <li><a href="contact.html">Contact</a></li>
-	      <li><a href="style-guide.html">Style Guide</a></li>
+	      <li><a href="index.html">Guide</a></li>
 	      <li>
 	    </ul>
 	  </div>
@@ -75,12 +75,10 @@
     <div class="col-lg-12">
       <div class="jumbotron">
 
-	        	    <h2> CIVICS.com Consultancy Services</h2>
-	        	    	        <h3><i>
-		        	    	    
-		        	    	        <p>
-			        	    	        Daniel "Dazza" Greenwood, <br>
-		        	    	        Founder and Principal </i></h3>
+
+        <h1>About</h1>
+        <h3>CIVICS.com Consultancy Services</h3>
+         <h3><i>Daniel "Dazza" Greenwood, Founder </i></h3>
 
       </div>
     </div>
