--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Semi-Pro | Contact</title>
+<title>CIVICS.com | Contact</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -63,7 +63,7 @@
 	      <li><a href="portfolio.html">Portfolio</a></li>
 	      <li><a href="blog.html">Blog</a></li>
 	      <li class='current'><a class='current' href="contact.html">Contact</a></li>
-	      <li><a href="style-guide.html">Style Guide</a></li>
+	      <li><a href="index.html">Guide</a></li>
 	      <li>
 	    </ul>
 	  </div>
