--- a/index.html
+++ b/index.html
@@ -1,81 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>CIVICS.com | Twitter Bootstrap 3 Theme</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  
+<!-- $title Twitter Bootstrap 3 Theme -->
+<!-- $pageid home -->
 
-        <!-- Hammer reload -->
-          <script>
-            setInterval(function(){
-              try {
-                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
-                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
-                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
-                ws.onmessage = function(){
-                  var links = document.getElementsByTagName('link'); 
-                    for (var i = 0; i < links.length;i++) { 
-                    var link = links[i]; 
-                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
-                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
-                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
-                    }
-                  }
-                }
-              }catch(e){}
-            }, 1000)
-          </script>
-        <!-- /Hammer reload -->
-      
-  
-<link rel='stylesheet' href='assets/css/bootstrap.min.css'>
-<link rel='stylesheet' href='assets/css/font-awesome.min.css'>
-<link rel='stylesheet' href='assets/css/theme.css'>
-<script src='assets/js/jquery-1.8.3.min.js'></script>
-<script src='assets/js/bootstrap.min.js'></script>
-<script src='assets/js/respond.js'></script>
-<script src='assets/js/less.js'></script>
-<script src='assets/js/app.js'></script> <!-- respond.js required for IE8 media queries //-->
-  
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900|Bitter:400,700' rel='stylesheet' type='text/css'>
-<link href="assets/img/favicon.ico" rel="shortcut icon">
-<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-</head>
-
-<body id="home">
-<div class="container">
-	<div class="navbar navbar-default" role="navigation">
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	  
-	    <a class="current navbar-brand" href="index.html">CIVICS.com</a>
-	  </div>
-
-	  <div class="collapse navbar-collapse navbar-responsive-collapse">
-	    <ul class="nav navbar-nav navbar-right">
-	    	<li class="current active"><a class='current' href="index.html">Home</a></li>
-	      <li><a href="about.html">About</a></li>
-	      <li><a href="portfolio.html">Portfolio</a></li>
-	      <li><a href="blog.html">Blog</a></li>
-	      <li><a href="contact.html">Contact</a></li>
-	      <li class='current'><a class='current' href="index.html">Guide</a></li>
-	      <li>
-	    </ul>
-	  </div>
-	</div>
-</div>
+<!-- @include _header -->
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
       <div class="jumbotron alternate">
-        <h2> <i>by design </i></h2>
         <h1> Data + Identity = Results </h1>
+            <h2> <i>by design </i></h2>
       </div>
     </div>
   </div>
@@ -237,35 +170,5 @@ $('.carousel').carousel({
 </script>
 
 
-<div class="footer-wrapper">
-	<div class="container">
-	  <div class="row footer">
-	    <div class="col-md-4 center block border-bottom">
-	      <h3>About</h3>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	    </div>
-	    <div class="col-md-4 center block border-bottom">
-	      <h3>Twitter</h3>
-	      <p>Tweeterings <a href="http://twitter.com/DazzaGreenwood">@DazzaGreenwood</a></p>
-	    </div>
-	    <div class="col-md-4 center block">
-	      <h3>Blog</h3>
-	      <p><a href="#">Published </a><br />
-	      <small>Postings</small></p>
-	    </div>
-	  </div>
-	  <!-- sub-footer //-->
-	  <div class="row sub-footer">
-			<div class="col-sm-6 col-xs-12">
-				<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content and Data</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="CIVICS.com" property="cc:attributionName" rel="cc:attributionURL">Dazza Greenwood & CIVICS.com</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></p>
-			</div>
-			<div class="col-sm-6 col-xs-12">
-				<p class="pull-right">Attribution: <a href="http://DazzaGreenwood.com">Daniel "Dazza" Greenwood</a> & <a href="http://CIVICS.com">CIVICS.com</a></p>
-			</div>
-		</div>
-	</div>
-</div>
+<!-- @include _footer -->
 
-</body>
-</html>
-
