--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 	      <li><a href="portfolio.html">Portfolio</a></li>
 	      <li><a href="blog.html">Blog</a></li>
 	      <li><a href="contact.html">Contact</a></li>
-	      <li><a href="index.html">Guide</a></li>
+	      <li class='current'><a class='current' href="about.html">Method</a></li>
 	      <li>
 	    </ul>
 	  </div>
