embedded contact form and refined rest of pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,21 +84,21 @@
 <div class="portfolio-wrapper">
   <div class="row">
     <div class="col-md-6 center block">
-      <h3>Cardeo Creative</h3>
+      <h3>Big Data</h3>
       <p><a href="portfolio-item.html"><img src="assets/img/work-imac.png" width="400" height="250" alt="iMac" /></a></p>
-      <p>Website</p>
+      <p>  <a href="portfolio-item-02.html">More Info</a> </p>
     </div>
     <div class="col-md-6 center block">
-      <h3>Oneyedjacks</h3>
+      <h3>Electronic Signatures</h3>
       <p><a href="portfolio-item.html"><img src="assets/img/work-ipod.png" width="400" height="250" alt="iPod" /></a></p>
       <p>Album Artwork</p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6 center block">
-      <h3>Reeder</h3>
-      <p><a href="portfolio-item.html"><img src="assets/img/work-ipad.png" width="400" height="250" alt="iPad" /></a></p>
-      <p>WordPress Theme</p>
+      <h3>CIVICS.com HackAttack</h3>
+      <p><a href="portfolio-item.html"><img src="assets/img/HackAttack.jpg" width="400" height="250" alt="iPad" /></a></p>
+      <p>Welcome to the open public research site of the eCitizen research and development projects of Prof. Alex "Sandy" Pentland's MIT Human Dynamics Lab . These projects and initiatives are led by MIT Media Lab's Dazza Greenwood and focus on legal and policy dimensions of big data and personal data markets and ecologies. </p>
     </div>
     <div class="col-md-6 center block">
       <h3>Reskee</h3>
